compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_path_no_fields.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module a export b type b : int end a\nvar e : a.b.c := 1\nvar f : a.nope := 1\n"
---
"a"@(FileId(1), 7..8) [Module(No)]: <error>
"b"@(FileId(1), 23..24) [Type]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"b"@(FileId(1), 16..17) [Export]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"e"@(FileId(1), 41..42) [ConstVar(Var, No)]: <error>
"f"@(FileId(1), 60..61) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 49..50: no field named `c` in `b`
| error in file FileId(1) for 49..50: no field named `c` in here
error in file FileId(1) at 66..70: no field named `nope` in `a`
| error in file FileId(1) for 66..70: no field named `nope` in here
