compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_path_normal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module a export b module b export c type c : int end b end a\nvar d : a.b.c := 1\n"

---
"a"@(FileId(1), 7..8) [Declared]: <error>
"b"@(FileId(1), 25..26) [Declared]: <error>
"c"@(FileId(1), 41..42) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(2))] of int
"c"@(FileId(1), 34..35) [ItemExport(LocalDefId(2))]: alias[DefId(LibraryId(0), LocalDefId(2))] of int
"b"@(FileId(1), 16..17) [ItemExport(LocalDefId(1))]: <error>
"d"@(FileId(1), 65..66) [Declared]: alias[DefId(LibraryId(0), LocalDefId(2))] of int
"<root>"@(dummy) [Declared]: <error>

