compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_path_not_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module a export b var b : int end a\nvar e : a.b\n"

---
"a"@(FileId(1), 7..8) [Declared]: <error>
"b"@(FileId(1), 22..23) [Declared]: int
"b"@(FileId(1), 16..17) [ItemExport(LocalDefId(1))]: int
"e"@(FileId(1), 40..41) [Declared]: <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 46..47: cannot use `b` as a type alias
| error in file FileId(1) for 46..47: `b` is a reference to a variable, not a type
| note in file FileId(1) for 22..23: `b` declared here
