compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_resolved_forward.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "type fowo : forward\ntype fowo : int\nvar _ : fowo"

---
"fowo"@(FileId(1), 5..9) [Forward(Type, Some(LocalDefId(1)))]: forward
"fowo"@(FileId(1), 25..29) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"_"@(FileId(1), 40..41) [Declared]: ref_mut alias[DefId(LibraryId(0), LocalDefId(1))] of int
"<root>"@(dummy) [Declared]: <error>

