compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_undecl_def_in_lvalue.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "undecl := 1"

---
"undecl"@(FileId(1), 0..6) [Undeclared]: <error>
"<root>"@(dummy) [Declared]: <error>

