compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_undecl_def_in_rvalue.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var lvalue := undecl"
---
"undecl"@(FileId(1), 14..20) [Undeclared]: <error>
"lvalue"@(FileId(1), 4..10) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

