compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_var_compatible.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k : int := 100"

---
"k"@(FileId(1), 4..5) [Declared]: ref_mut int
"<root>"@(dummy) [Declared]: <error>

