compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_var_error_prop.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k := 20 + false\nvar l : int := k   % Nothing reported here\n"

---
"k"@(FileId(1), 4..5) [Declared]: ref_mut <error>
"l"@(FileId(1), 24..25) [Declared]: ref_mut int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 12..13: incompatible types for addition
| info: operands must both be numbers, strings, or sets
